@@ -36,7 +36,7 @@ import org.apache.lucene.util.SetOnce;
  * new {@link DocumentsWriterPerThread} instance.
  * </p>
  */
-abstract class DocumentsWriterPerThreadPool {
+abstract class DocumentsWriterPerThreadPool implements Cloneable {
   
   /**
    * {@link ThreadState} references and guards a
@@ -119,10 +119,10 @@ abstract class DocumentsWriterPerThreadPool {
     }
   }
 
-  private final ThreadState[] threadStates;
+  private ThreadState[] threadStates;
   private volatile int numThreadStatesActive;
-  private final SetOnce<FieldNumbers> globalFieldMap = new SetOnce<FieldNumbers>();
-  private final SetOnce<DocumentsWriter> documentsWriter = new SetOnce<DocumentsWriter>();
+  private SetOnce<FieldNumbers> globalFieldMap = new SetOnce<FieldNumbers>();
+  private SetOnce<DocumentsWriter> documentsWriter = new SetOnce<DocumentsWriter>();
   
   /**
    * Creates a new {@link DocumentsWriterPerThreadPool} with a given maximum of {@link ThreadState}s.
@@ -142,6 +142,23 @@ abstract class DocumentsWriterPerThreadPool {
       final FieldInfos.Builder infos = new FieldInfos.Builder(globalFieldMap);
       threadStates[i] = new ThreadState(new DocumentsWriterPerThread(documentsWriter.directory, documentsWriter, infos, documentsWriter.chain));
     }
+  }
+
+  @Override
+  public DocumentsWriterPerThreadPool clone() {
+    // We should only be cloned before being used:
+    assert numThreadStatesActive == 0;
+    DocumentsWriterPerThreadPool clone;
+    try {
+      clone = (DocumentsWriterPerThreadPool) super.clone();
+    } catch (CloneNotSupportedException e) {
+      // should not happen
+      throw new RuntimeException(e);
+    }
+    clone.documentsWriter = new SetOnce<DocumentsWriter>();
+    clone.globalFieldMap = new SetOnce<FieldNumbers>();
+    clone.threadStates = new ThreadState[threadStates.length];
+    return clone;
   }
   
   /**
